feat(clonerefs): add sparse-checkout mode

--- a/config/prow/cluster/prowjob-crd/prowjob_customresourcedefinition.yaml
+++ b/config/prow/cluster/prowjob-crd/prowjob_customresourcedefinition.yaml
@@ -1716,6 +1716,20 @@ spec:
                         SkipSubmodules determines if submodules should be
                         cloned when the job is run. Defaults to false.
                       type: boolean
+                    sparse_checkout_files:
+                      description: |-
+                        SparseCheckoutFiles limits the working tree to only the listed paths.
+                        Accepts the same patterns as git sparse-checkout set: file names,
+                        directory names, and gitignore-style globs (e.g. "Makefile",
+                        "pkg/operator", "config/**/*.yaml").
+                        When set, clonerefs will:
+                          1. run git sparse-checkout init to enable sparse mode
+                          2. run git fetch with --depth 1 --filter=blob:none --no-tags
+                          3. run git sparse-checkout set <paths> before checkout
+                        Only the blobs needed for the requested paths are downloaded.
+                      items:
+                        type: string
+                      type: array
                     workdir:
                       description: |-
                         WorkDir defines if the location of the cloned
@@ -9800,6 +9814,20 @@ spec:
                       SkipSubmodules determines if submodules should be
                       cloned when the job is run. Defaults to false.
                     type: boolean
+                  sparse_checkout_files:
+                    description: |-
+                      SparseCheckoutFiles limits the working tree to only the listed paths.
+                      Accepts the same patterns as git sparse-checkout set: file names,
+                      directory names, and gitignore-style globs (e.g. "Makefile",
+                      "pkg/operator", "config/**/*.yaml").
+                      When set, clonerefs will:
+                        1. run git sparse-checkout init to enable sparse mode
+                        2. run git fetch with --depth 1 --filter=blob:none --no-tags
+                        3. run git sparse-checkout set <paths> before checkout
+                      Only the blobs needed for the requested paths are downloaded.
+                    items:
+                      type: string
+                    type: array
                   workdir:
                     description: |-
                       WorkDir defines if the location of the cloned
